--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.23",
     "axion": "^0.1.0",
     "axios": "^0.23.0",
     "classnames": "^2.3.1",
@@ -19,6 +24,7 @@
     "redux-thunk": "^2.4.0",
     "reselect": "^4.1.4",
     "reselector": "^0.23.0",
+    "typescript": "^4.5.5",
     "web-vitals": "^1.1.2",
     "yarn": "^1.22.17"
   },
@@ -47,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/redux-form": "^8.3.3",
     "react-test-renderer": "^17.0.2"
   }
 }
